# nesy-verification

./: .gitignore  README.md  pyproject.toml  todo.md
auto_LiRPA/auto_LiRPA/operators/: softmax.py
nesy_verification/: MNIST_controller.py  arithmetic_circuit_bound_propagation.py  automaton_bound_propagation.py  cnn_training.py  cnn_training_no_softmax.py  data_utils.py  evaluate_saved_models.py  models.py  pgd.py  preds_out_of_bound.py  preds_out_of_bounds.py  preds_out_of_bounds_mine.py  verification_saved_models.py
nesy_verification/data/: MNIST_data_utils.py
nesy_verification/neural/: cnn_training.py  cnn_training_no_softmax.py  evaluate_saved_models.py
nesy_verification/neural/neural_bounds/: results_0.01_with_softmax.csv
nesy_verification/neural/neural_bounds/with_softmax/: results_0.001_with_softmax.json  results_1e-05_with_softmax.csv
nesy_verification/neural/neural_bounds/without_softmax/: results_0.0001_no_softmax.csv  (+9 more)
nesy_verification/neural/old_bounds/: results_0.01_no_NaN.csv
nesy_verification/neural_bounds/: results_0.01.csv  summary_0.01.json
nesy_verification/saved_models/: cnn_no_softmax.pt  cnn_with_softmax.pt
nesy_verification/saved_models/icl/: cnn_no_softmax.pt  cnn_with_log_softmax.pt  cnn_with_no_softmax.pt  cnn_with_softmax.pt  dummy_indices.pt  results_0.0001_no_softmax.json  results_0.0001_with_softmax.csv  results_0.001_no_softmax.csv  results_0.01.csv  results_0.01_with_softmax.json  results_0.1.csv  results_0.1_with_softmax.json  results_1e-05_with_softmax.json  summary_0.1.json  test_indices.pt  train_indices.pt
(+7 files in other folders)
