[tool.poetry]
name = "nesy-verification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.13"
numpy = "^1.26.1"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
black = "^23.10.1"
rich = "^13.6.0"
torchmetrics = "^1.2.0"
pylint = "^3.0.2"
torchvision = "^0.16.1"
scikit-learn = "^1.3.2"

[tool.poetry.dev-dependencies]
black = "23.3.0"
isort = "5.11.5"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
