[tool.poetry]
name = "nesy-verification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.13"
numpy = "^1.26.1"
torch = "^1.12.0"
black = "^23.10.1"
rich = "^13.6.0"
torchmetrics = "^1.2.0"
pylint = "^3.0.2"
torchvision = "^0.13.0"
scikit-learn = "^1.3.2"
auto-lirpa = { path = "/Users/edward/github/imperial/nesy-verification/auto_LiRPA" }
tqdm = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
